Fix Nav spacing

--- a/css/header.css
+++ b/css/header.css
@@ -62,7 +62,7 @@ nav {
 
 @media screen and (min-width: 577px) and (max-width: 768px) {
   .navbar-collapse {
-    padding-left: 4%;
+    padding-right: 4%;
   }
 
   .navbar-toggler {
